# example-auth-django

./: .env.example  Makefile  README.md  devbox.json  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: linting.yml  test.yml  typecheck.yml  unused.yml
app/: __init__.py  views.py
app/urls/: __init__.py  auth.py  root.py
lib/: auth.py  config.py  guard.py
project/: __init__.py  jinja2.py  settings.py  urls.py  wsgi.py
spec/: __init__.py
templates/: index.html  layout.html  profile.html
test/: __init__.py  conftest.py  test_app.py
