[project]
name = "example-django-auth"
version = "0.0.0"
description = "Django application demonstrating ZITADEL authentication with PKCE using Authlib"
requires-python = ">=3.12"
dependencies = [
  "Django>=6.0,<7.0",
  "Authlib>=1.3.2,<2.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "requests>=2.32.0,<3.0.0",
  "Jinja2>=3.0.0,<4.0.0"
]

[project.urls]
repository = "https://github.com/zitadel/example-django-auth"

[tool.poetry]
name = "example-django-auth"
version = "0.0.0"
description = "Django application demonstrating ZITADEL authentication with PKCE using Authlib"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
Django = ">=6.0,<7.0"
Authlib = ">=1.3.2,<2.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
requests = ">=2.32.0,<3.0.0"
Jinja2 = ">=3.0.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
pytest-django = ">=4.5.0"
mypy = ">=1.5"
ruff = ">=0.12.4"
fawltydeps = "0.20.0"
django-stubs = ">=5.1.0"
types-authlib = "^1.6.6.20251220"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
testpaths = ["test", "spec"]
python_files = "test_*.py *_spec.py"
addopts = [
  "--cov=app",
  "--cov=lib",
  "--cov-report=html:build/coverage/html",
  "--cov-report=xml:build/coverage/clover.xml",
]
junit_family = "xunit2"

[tool.coverage.run]
data_file = "build/coverage/.coverage"
omit = []

[tool.mypy]
files = ["."]
strict = true
plugins = ["mypy_django_plugin.main"]
exclude = ["build", "dist", ".venv", ".devbox"]

[tool.django-stubs]
django_settings_module = "project.settings"

[tool.ruff]
line-length = 130
fix = true
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C", "N", "Q", "S", "T"]
extend-select = ["A"]
ignore = ["S101"]

[tool.fawltydeps]
ignore_unused = [
  "fawltydeps",
  "Jinja2",
  "requests",
  "mypy",
  "pytest-cov",
  "pytest",
  "pytest-django",
  "ruff",
  "django-stubs"
]
