[project]
name = "example-django-auth"
version = "0.0.0"
description = "Django application demonstrating ZITADEL authentication with PKCE using Authlib"
requires-python = ">=3.12"
dependencies = [
  "Django>=6.0,<7.0",
  "Authlib>=1.3.2,<2.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "requests>=2.32.0,<3.0.0",
  "Jinja2>=3.0.0,<4.0.0"
]

[project.urls]
repository = "https://github.com/zitadel/example-django-auth"

[dependency-groups]
dev = [
  "pytest>=7.2.1",
  "pytest-cov>=4.0.0",
  "pytest-django>=4.5.0",
  "ruff>=0.12.4",
  "fawltydeps==0.19.0",
  "ty>=0.0.4",
  "django-stubs>=5.2.9",
]

[tool.ty.environment]
python-version = "3.12"
root = ["."]

[tool.ty.src]
respect-ignore-files = true
include = ["app"]
exclude = []

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
cache_dir = ".pytest"
DJANGO_SETTINGS_MODULE = "project.settings"
testpaths = ["test", "spec"]
python_files = "test_*.py *_spec.py"
addopts = [
  "--cov=app",
  "--cov=lib",
  "--cov-report=html:build/coverage/html",
  "--cov-report=xml:build/coverage/clover.xml",
]
junit_family = "xunit2"

[tool.coverage.run]
data_file = "build/coverage/.coverage"
omit = []

[tool.django-stubs]
django_settings_module = "project.settings"

[tool.ruff]
cache-dir = ".ruff"
line-length = 130
fix = true
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C", "N", "Q", "S", "T"]
extend-select = ["A"]
ignore = ["S101"]

[tool.fawltydeps]
ignore_unused = [
  "fawltydeps",
  "Jinja2",
  "requests",
  "pytest-cov",
  "pytest",
  "pytest-django",
  "ruff",
  "ty",
  "django-stubs"
]
